## Process this file with automake to produce Makefile.in

EXTRA_DIST = \
	addFile.xpm \
	balsa-block.xpm \
	balsa-block-with-exclamation.xpm \
	balsa.xpm \
	breeze-block.xpm \
        builtin-lib.xpm \
	close.xpm \
	directory.xpm \
	edit.xpm \
	edit2.xpm \
	implementation.xpm \
	input-file-port.xpm \
	input-port.xpm \
	input-value-port.xpm \
	lard-block.xpm \
	lard-test-file.xpm \
	memory-component.xpm \
	new.xpm \
	open-recent.xpm \
	open.xpm \
	options.xpm \
	output-file-port.xpm \
	output-port.xpm \
	output-stdout-port.xpm \
	print.xpm \
	procedure.xpm \
	save.xpm \
	selected.xpm \
	sync-port.xpm \
	tick.xpm \
	undefined-port.xpm \
	update.xpm

