## Process this file with automake to produce Makefile.in

EXTRA_DIST = \
	callgraph_16.xpm \
	pause.xpm \
	sourcecode_16.xpm \
	traceallchans.xpm \
	traceportsonly.xpm \
	calllist_16.xpm \
	gtkwave_16.xpm \
	play.xpm \
	stop.xpm \
	tracenamedportsonly.xpm \
	stock_zoom_fit.xpm \
	stock_zoom_in.xpm \
	stock_zoom_out.xpm \
	showchannames.xpm \
	showchanvalues.xpm \
	gnome-warning.xpm \
	screenshot.xpm
