## Process this file with automake to produce Makefile.in

techcommoncompctrlbroaddir = $(datadir)/tech/common/components/ctrl-broad

techcommoncompctrlbroad_DATA = \
	Arbiter.abs \
	Call.abs CallActive.abs \
	Concur.abs Continue.abs \
	DecisionWait.abs Fork.abs \
	Halt.abs Loop.abs \
	Passivator.abs Sequence.abs \
	Synch.abs \
	WireFork.abs SequenceOptimised.abs 

EXTRA_DIST = $(techcommoncompctrlbroad_DATA)
