## Process this file with automake to produce Makefile.in

techcommoncompdata1of4dir = $(datadir)/tech/common/components/data-1of4

techcommoncompdata1of4_DATA = \
	ActiveEagerFalseVariable.abs ActiveEagerNullAdapt.abs \
	Adapt.abs \
	Bar.abs BinaryFunc.abs \
	BinaryFuncConstR.abs CallDemux.abs \
	CallDemuxPush.abs CallMux.abs \
	Case.abs CaseFetch.abs \
	Combine.abs CombineEqual.abs \
	Constant.abs ContinuePush.abs \
	Encode.abs FalseVariable.abs \
	Fetch.abs ForkPush.abs \
	HaltPush.abs Mask.abs \
	NullAdapt.abs PassivatorPush.abs \
	PassiveEagerFalseVariable.abs PassiveEagerNullAdapt.abs \
	PassiveSyncEagerFalseVariable.abs \
	Split.abs \
	SplitEqual.abs SynchPull.abs \
	SynchPush.abs UnaryFunc.abs \
	Variable.abs \
	Slice.abs \
	BuiltinVariable.abs

EXTRA_DIST = $(techcommoncompdata1of4_DATA)
