## Process this file with automake to produce Makefile.in

techcommoncompdatasinglebroaddir = $(datadir)/tech/common/components/data-single-broad

techcommoncompdatasinglebroad_DATA = \
	ActiveEagerFalseVariable.abs ActiveEagerNullAdapt.abs \
	Adapt.abs \
	Bar.abs BinaryFunc.abs \
	BinaryFuncConstR.abs CallDemux.abs \
	CallDemuxPush.abs CallMux.abs \
	Case.abs CaseFetch.abs \
	Combine.abs CombineEqual.abs \
	Constant.abs ContinuePush.abs \
	Encode.abs FalseVariable.abs \
	Fetch.abs ForkPush.abs \
	HaltPush.abs InitVariable.abs Mask.abs \
	NullAdapt.abs \
	PassivatorPush.abs \
	PassiveEagerFalseVariable.abs PassiveEagerNullAdapt.abs \
	PassiveSyncEagerFalseVariable.abs \
	Split.abs SplitEqual.abs \
	SynchPull.abs SynchPush.abs \
	UnaryFunc.abs Variable.abs \
	While.abs \
	Slice.abs \
	BuiltinVariable.abs

EXTRA_DIST = $(techcommoncompdatasinglebroad_DATA)
