## Process this file with automake to produce Makefile.in

techcommoncompdatasingleearlydir = $(datadir)/tech/common/components/data-single-early

techcommoncompdatasingleearly_DATA = \
	Bar.abs \
	BuiltinVariable.abs \
	CallDemux.abs \
	CallDemuxPush.abs \
	CallMux.abs \
	Case.abs \
	CaseFetch.abs \
	Encode.abs \
	Fetch.abs \
	FalseVariable.abs \
	NullAdapt.abs \
	PassivatorPush.abs \
	Variable.abs \
	While.abs

EXTRA_DIST = $(techcommoncompdatasingleearly_DATA)
